comment to and additional CSS
Signed-off-by: Kevin N. Murphy <knmurphy@users.noreply.github.com>

--- a/webui/src/main.scss
+++ b/webui/src/main.scss
@@ -11,6 +11,7 @@ $secondary: (
 );
 $yiq-contrasted-threshold:  160;
 
+// Material Icons fonts
 @font-face {
   font-family: 'Material Icons';
   font-style: normal;
@@ -22,6 +23,32 @@ $yiq-contrasted-threshold:  160;
     url(public/fonts/MaterialIcons-Regular.woff) format('woff'),
     url(public/fonts/MaterialIcons-Regular.ttf) format('truetype');
 }
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
+// end Material Icons font
 
 @import "node_modules/daemonite-material/assets/scss/material";
 
