--- a/keycloak/themes/haven/login/resources/css/haven.css
+++ b/keycloak/themes/haven/login/resources/css/haven.css
@@ -1,7 +1,51 @@
-html{
-    height:100%;
+:root{
+  --primary:#2FA09D;
+  --primary-dark:darken(#2FA09D, 30%)
+  --primary-light:lighten(#2FA09D, 30%);
+  --secondary:#E86953;
+  --secondary-dark: darken(#E86953, 30%);
+  --secondary-light: lighten(#E86953, 30%);
+  --body-bg:#f0f0f1;
 }
+
+.bg-primary, .btn-primary{
+  background-color: var(--primary) !important;
+}
+
+.bg-secondary, .btn-secondary{
+  background-color: var(--secondary) !important;
+}
+
+.btn-flat-secondary, .btn-flat-secondary:active, .btn-flat-secondary:focus, .btn-flat-secondary:hover,
+.btn-outline-secondary, .btn-outline-secondary:active, .btn-outline-secondary:focus, .btn-outline-secondary:hover{
+  color: var(--secondary);
+}
+
 body {
+  background-color:white;;
+  font-family: Arial, sans-serif;
+  font-size: 16px !important;
+}
+
+header{
+  height:64px;
+}
+
+label{
+  font-family: "ff-tisa-web-pro", serif
+}
+
+.custom-select:focus, .form-control-file:focus, .form-control:focus, .custom-select:hover, .form-control-file:hover, .form-control:hover {
+    border-color: var(--primary);
+    box-shadow: inset 0 -2px 0 -1px var(--primary);
+    outline: 0;
+} /*This overwrites the form lines being black*/
+
+button{
+  font-family: "mr-eaves-modern", sans-serif;
+}
+
+/*body {
   --mdc-theme-primary:#2FA09D;
   --mdc-theme-accent:#E86953;
   --mdc-theme-background:#fff;
@@ -11,13 +55,13 @@ body {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  /* font should be changed to Bitter as in webui */
+<!-- font should be changed to Bitter as in webui ----------------------------------->
   font-family:"ff-tisa-web-pro",serif;
   min-height: 100%;
-}
+}*/
 
 /* ---------- MS Edge browser support ---------- */
-.mdc-layout-grid__cell--span-12{
+/*.mdc-layout-grid__cell--span-12{
     width: 100%;
 }
 
@@ -39,62 +83,55 @@ body {
 .mdc-textfield__label--float-above{
     color: #2FA09D !important;
     color: var(--mdc-theme-primary,#2FA09D);
-}
+}*/
 /* ---------- END MS Edge browser support ---------- */
 
-.align-center{
-	text-align: center;
-}
+/*-- Template 1 - Front Login Page --*/
 
-.header-container{
-	padding-top:24px;
+.jumbotron{
+  border: none;
+  box-shadow: none;
 }
 
 .login-header{
   font-family: "mr-eaves-modern", sans-serif;
   text-transform: uppercase;
-  color: var(--mdc-theme-accent);
-  margin:27px auto;
-  font-size: 58px;
+  color: var(--secondary);
+  margin-top:27px
 }
 
-.kc-feedback-text {
+/*.kc-feedback-text {
 	font-family: "mr-eaves-modern", sans-serif;
     color: #cc0000;
 	font-size: 1.1em;
-}
+}*/
 
-label {
-  font-family: "ff-tisa-web-pro",serif ;
-}
-
-.login-content-container{
+/*.login-content-container{
     flex:2;
     -webkit-box-flex: 2;
     -ms-flex: 2;
     padding-top:0px;
     margin: 0 !important;
-}
+}*/
 
 .login-box{
-    text-align: right;
+    /*text-align: right;*/
     border-right: 2px solid #87898C;
-    padding-right: 50px;
-    margin-right:-16px;
+    /*padding-right: 50px;*/
+    /*margin-right:-16px;*/
 }
 
 .forgot-password{
-    margin-right:93px;
-    margin-bottom: 20px;
+    font-family: "ff-tisa-web-pro", serif;
     font-size:13px;
 }
 
-.registration-link{
+/*.registration-link{
     display: flex;
     padding-left:30px;
-}
+}*/
 
-.btn-primary{
+/*.btn-primary{
     height: 40px !important;
     width: 200px !important;
     background-color: #2fa09d;
@@ -105,110 +142,77 @@ label {
     margin-bottom: 20px;
 	font-size: 13px;
   font-family: "mr-eaves-modern", sans-serif;
-}
+}*/
 
 .bottom-container{
-	background-color:#f1f1f1;
-	overflow:hidden;
-	width:100%;
+	background-color: var(--body-bg);
+  text-align: center;
+  margin-top: 48px;
 }
 
 .bottom-container a:hover{
     color: white;
 }
-
-.alert{
-    border:2px solid transparent;
-    padding: 7px;
-	font-family: "Arial", sans-serif;
-}
+/*-- END Template 1 --*/
 
 .alert i{
-    vertical-align: middle;
-}
-
-.alert-text{
-    vertical-align: middle;
-    margin-left:10px;
+  margin-right: 10px;
 }
 
 .alert.alert-error{
-    background-color: #F8E7E7;
-    border-color: #B91415;
+    background-color: #f7dede;
 }
 
     .alert.alert-error i{
         color: #B91416;
     }
 
-.alert.alert-success {
-    background-color: #E4F1E1;
-    border-color: #4B9E39;
-}
-
     .alert.alert-success i{
         color: #4B9E39;
     }
-
-.alert.alert-warning {
-    background-color: #FEF1E9;
-    border-color: #F17528;
-}
-
-    .alert.alert-warning i{
-        color: #F17528;
-    }
-
-.alert.alert-info {
-    background-color: #E4F3FA;
-    border-color: #5994B2;
-}
 
     .alert.alert-info i{
         color: #5994B2;
     }
 
 footer{
-	--mdc-theme-background:#2FA09D;
-	font-family: "mr-eaves-modern", sans-serif;
+	background-color: var(--primary);
 	height: 55px;
 	padding: 15px;
-	justify-content: center !important;
-	font-weight: 600;
-	font-size: .9em;
 }
 
-footer a{
+footer a, footer p{
 	color:#fff;
+  font-family: "mr-eaves-modern", sans-serif !important;
 }
 
 #footer-lines{
-	padding-top: 80px;
+	padding-top: 145px;
 	margin-bottom: -63px;
 	width:248px;
 }
 
-/* Login Totp config page */
+/*-- Template 2 - Other Pages --*/
 
 body.body-other-pages{
-    background-color: #f0f0f1;
+    background-color: var(--body-bg) !important;
 }
 
 a{
-    color:var(--mdc-theme-accent)
+    color:var(--secondary)
 }
 
 a:hover, a:focus{
-    color: var(--mdc-theme-primary);
+    color: var(--primary);
 }
 
-header.header{
+/*header.header{
     height: 64px;
-}
+}*/
 
 .heading{
-    padding-bottom: 0px;
-    margin-bottom: 30px;
+    /*padding-bottom: 0px;
+    margin-bottom: 30px;*/
     border-bottom: 1px solid #E4E4E4;
 }
 
@@ -216,6 +220,11 @@ header.header{
     font-family: "mr-eaves-modern", sans-serif;
     color: #3f4145;
     font-weight: normal;
+}
+
+.email-verify-box{
+  border: 1px solid #343434;
+  border-radius:10px;
 }
 
 .content-container-other{
@@ -229,26 +238,27 @@ p{
 
 h2{
   font-family: "mr-eaves-modern", sans-serif;
+  text-transform: uppercase;
   font-size: 28px;
 }
 
-#TotpForm div.mdc-textfield, #TotpForm input {
+/*#TotpForm div.mdc-textfield, #TotpForm input {
     width:100%;
 }
 
 #TotpForm{
     margin-top:-20px;
-}
+}*/
 
 .code{
   font-family: "mr-eaves-modern", sans-serif;
   font-size: 16px;
 }
 
-.form-btn{
+/*.form-btn{
     float:right;
     margin-top:20px;
-}
+}*/
 
 @media screen and (max-width:330px){
     #kc-totp-secret-qr-code, .code{
@@ -262,16 +272,17 @@ h2{
     .login-box{
         border-right:0px;
         border-bottom: 2px solid #87898C;
-        text-align: center;
+        margin-bottom: 24px;
+        /*text-align: center;
         padding-right:0px;
-        margin-right: 0;
+        margin-right: 0;*/
     }
 
-    .registration-link{
+    /*.registration-link{
         display: inline;
         padding-left:0px;
         text-align: center;
-    }
+    }*/
 }
 
 @media screen and (min-width: 768px){
