--- a/keycloak/themes/haven/account/resources/css/haven.css
+++ b/keycloak/themes/haven/account/resources/css/haven.css
@@ -24,6 +24,7 @@
 
 body {
   background-color:var(--body-bg) !important;
+  /*-- font should be changed to Bitter as in webui -----------------------------------*/
   font-family: Arial, sans-serif;
   font-size: 16px !important;
 }
@@ -81,12 +82,6 @@ div.navdrawer-content{
 
 button{
   font-family: "mr-eaves-modern", sans-serif;
-}
-
-@media screen and (min-width:992px){
-  main.ml-lg-5{
-    margin-left: 15rem !important;
-  }
 }
 
 h2{
@@ -157,60 +152,14 @@ ol#AccountForm{
     font-family: "mr-eaves-modern", sans-serif;
 }
 
+@media screen and (min-width:992px){
+  main.ml-lg-5{
+    margin-left: 15rem !important;
+  }
+}
+
 @media screen and (max-width:330px){
     .totp-img{
         margin-left:-8px;
     }
-}
-
-/* Bootstrap drowpdown used on template header */
-.kc-dropdown{
-    position: relative;
-}
-.kc-dropdown > a{
-    display:block;
-    padding: 11px 10px 12px;
-    line-height: 12px;
-    font-size: 12px;
-    color: #fff !important;
-    text-decoration: none;
-}
-.kc-dropdown > a::after{
-    content: "\2c5";
-    margin-left: 4px;
-}
-.kc-dropdown:hover > a{
-    background-color: rgba(0,0,0,0.2);
-}
-.kc-dropdown ul li a{
-    padding: 1px 11px;
-    font-size: 12px;
-    color: #000 !important;
-    border: 1px solid #fff;
-    text-decoration: none;
-    display:block;
-    line-height: 20px;
-}
-.kc-dropdown ul li a:hover{
-    color: #4d5258;
-    background-color: #d4edfa;
-    border-color: #b3d3e7;
-}
-.kc-dropdown ul{
-    position: absolute;
-    z-index: 2000;
-    list-style:none;
-    display:none;
-    padding: 5px 0px;
-    margin: 0px;
-    background-color: #fff !important;
-    border: 1px solid #b6b6b6;
-    border-radius: 1px;
-    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-    background-clip: padding-box;
-    min-width: 100px;
-}
-.kc-dropdown:hover ul{
-    display:block;
 }
