--- a/keycloak/themes/haven/login/resources/css/haven.css
+++ b/keycloak/themes/haven/login/resources/css/haven.css
@@ -22,8 +22,7 @@
 }
 
 body {
-  background-color:white;;
-  /*-- font should be changed to Bitter as in webui -----------------------------------*/
+  background-color:white;
   font-family: 'Bitter', serif;
   font-size: 16px !important;
 }
