Fixing a UI merge issue
Missed re-adding this during a merge conflict.
Signed-off-by: Lauren Behan <lauren.caitlan@gmail.com>

--- a/webui/src/main.scss
+++ b/webui/src/main.scss
@@ -57,11 +57,10 @@ li.nav-item.dropdown{
 }
 
 .user-avatar {
-    margin-top: -25px;
+    margin-top: -15px;
     border-radius: 50px;
     max-height: 55px;
-    margin-right: 15px;
-    vertical-align: text-top;
+    float:left;
 }
 
 .nav-link{
