--- a/mjml/templates/test.mjml
+++ b/mjml/templates/test.mjml
@@ -3,7 +3,7 @@
 
       <mj-section background-color="#ffffff" padding-bottom="20px" padding-top="20px">
        <mj-column>
-         <mj-image src="../../webui/public/img/logo@2x.png" alt="Haven GRC Company Logo" width="82px" height="71px"></mj-image>
+         <mj-image src="https://staging.havengrc.com/auth/resources/4.3.0.final/account/haven/img/logo@2x.png" alt="Haven GRC Company Logo" width="82px" height="71px"></mj-image>
          <mj-divider border-color="#2fa09d"></mj-divider>
        </mj-column>
       </mj-section>
