Email-Verification template
Adding image resources and new email-verification templates. Updated test to show hardcoded image urls.
Signed-off-by: Lauren Behan <lauren.caitlan@gmail.com>

--- a/mjml/templates/email-verification.mjml
+++ b/mjml/templates/email-verification.mjml
@@ -16,16 +16,8 @@
         </mj-column>
       </mj-section>
 
-      <mj-section  padding-top="0px" padding-bottom="0px">
-        <mj-column width="100%" padding-bottom="0px">
-          <mj-image src="https://staging.havengrc.com/auth/resources/4.3.0.final/email/haven/img/footer_lines@2x.png" width="248px" padding-bottom="0px"></mj-image>
-        </mj-column>
-        <mj-column width="100%" background-color="#2fa09d">
-          <mj-text align="center" font-family="Montserrat, sans-serif" font-size="16px" color="#fff">
-            <p>© 2017 <a href="www.kindlyops.com" style="text-decoration: none; color: inherit;">Kindly Ops</a></p>
-          </mj-text>
-         </mj-column>
-       </mj-section>
+      <mj-section  padding-bottom="30px" background-color="#2fa09d">
+      </mj-section>
 
     </mj-body>
   </mjml>
