--- a/mjml/templates/event-remove_totp.mjml
+++ b/mjml/templates/event-remove_totp.mjml
@@ -11,7 +11,7 @@
       <mj-section padding-bottom="40px" padding-top="0px">
         <mj-column>
           <mj-text align="center" font-family="sans-serif" font-size="16px">
-            ${kcSanitize(msg("emailVerificationBodyHtml",link, linkExpiration, realmName, linkExpirationFormatter(linkExpiration)))?no_esc}
+            ${kcSanitize(msg("eventRemoveTotpBodyHtml",event.date, event.ipAddress))?no_esc}
           </mj-text>
         </mj-column>
       </mj-section>
