--- a/mjml/templates/email-funnel-verification.mjml
+++ b/mjml/templates/email-funnel-verification.mjml
@@ -4,13 +4,13 @@
       <mj-section background-color="#ffffff" padding-bottom="10px" padding-top="20px">
        <mj-column>
          <mj-image src="https://staging.havengrc.com/auth/resources/4.5.0.final/email/haven/img/logo@2x.png" alt="Haven GRC Company Logo" width="82px" height="71px"></mj-image>
-         <mj-divider border-color="#2fa09d"></mj-divider>
+         <mj-divider border-color="#2fa09d" padding="10px 0px"></mj-divider>
        </mj-column>
       </mj-section>
 
-      <mj-section padding-bottom="40px" padding-top="0px">
+      <mj-section padding="0px 40px 40px">
         <mj-column>
-          <mj-text align="center" font-family="sans-serif" font-size="16px">
+          <mj-text align="left" font-family="sans-serif" font-size="16px">
             ${kcSanitize(msg("emailVerificationBodyHtml",link, linkExpiration, realmName, linkExpirationFormatter(linkExpiration)))?no_esc}
           </mj-text>
         </mj-column>
