--- a/gatekeeper/gatekeeper.tmpl
+++ b/gatekeeper/gatekeeper.tmpl
@@ -12,6 +12,10 @@ client-secret: {{ .Env.CLIENT_SECRET }}
 
 listen-http: 0.0.0.0:80
 listen: 0.0.0.0:443
+
+tls-cert: {{ .Env.TLS_CERT }}
+tls-private-key: {{ .Env.TLS_PRIVATE_KEY }}
+
 # enable-security-filter: false
 # enable-https-redirection: false
 upstream-url: {{ .Env.UPSTREAM_URL }}
