--- a/gatekeeper/gatekeeper.tmpl
+++ b/gatekeeper/gatekeeper.tmpl
@@ -17,7 +17,7 @@ tls-cert: {{ .Env.TLS_CERT }}
 tls-private-key: {{ .Env.TLS_PRIVATE_KEY }}
 
 # enable-security-filter: false
-# enable-https-redirection: false
+enable-https-redirection: false
 upstream-url: {{ .Env.UPSTREAM_URL }}
 secure-cookie: false
 
