--- a/gatekeeper/config/gatekeeper.tmpl
+++ b/gatekeeper/config/gatekeeper.tmpl
@@ -22,9 +22,8 @@ encryption-key: {{ .Env.GATEKEEPER_SESSION_KEY }}
 
 listen: 0.0.0.0:{{ .Env.GATEKEEPER_LISTEN_PORT }}
 
-#listen: 0.0.0.0:8443
-#tls-cert: {{ .Env.TLS_CERT }}
-#tls-private-key: {{ .Env.TLS_PRIVATE_KEY }}
+tls-cert: {{ .Env.TLS_CERT }}
+tls-private-key: {{ .Env.TLS_PRIVATE_KEY }}
 
 enable-security-filter: false
 enable-https-redirection: false
