--- a/gatekeeper/config/gatekeeper.tmpl
+++ b/gatekeeper/config/gatekeeper.tmpl
@@ -58,8 +58,10 @@ resources:
   white-listed: true
 - uri: /logout
   white-listed: true # this is the page after you have logged out
-- uri: /survey
+- uri: /survey/
   white-listed: true # this is the registration funnel entry point
+- uri: /api/ipsative_data
+  white-listed: true # publicly readable due to registration funnel
 - uri: /api/ipsative_surveys
   white-listed: true # publicly readable due to registration funnel
 - uri: /api/likert_surveys
