work around keycloak redirects on internal network
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/gatekeeper/Caddyfile.tmpl
+++ b/gatekeeper/Caddyfile.tmpl
@@ -1,6 +1,8 @@
 :80
 
-proxy / {{ .Env.KEYCLOAK_INTERNAL }}
+proxy / {{ .Env.KEYCLOAK_INTERNAL }} {
+    header_upstream X-Forwarded-Proto https
+}
 
 log / stdout "{combined}"
 errors stdout
