--- a/gatekeeper/Caddyfile.tmpl
+++ b/gatekeeper/Caddyfile.tmpl
@@ -1,7 +1,10 @@
 :80
 
 proxy / {{ .Env.KEYCLOAK_INTERNAL }} {
-    header_upstream X-Forwarded-Proto https
+    header_upstream Host {host}
+    header_upstream X-Real-IP {remote}
+    header_upstream X-Forwarded-For {remote}
+    header_upstream X-Forwarded-Proto {{ .Env.KEYCLOAK_SCHEME }}
 }
 
 log / stdout "{combined}"
