whitelist css path
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/gatekeeper/config/gatekeeper.tmpl
+++ b/gatekeeper/config/gatekeeper.tmpl
@@ -52,6 +52,8 @@ resources:
   white-listed: true
 - uri: /static/js/*
   white-listed: true
+- uri: /static/css/*
+  white-listed: true
 - uri: /sockjs-node/*
   white-listed: true
 - uri: /terms
