Add cookie policy page.
Also refactor terms and privacy links.

Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/gatekeeper/config/gatekeeper.tmpl
+++ b/gatekeeper/config/gatekeeper.tmpl
@@ -66,6 +66,8 @@ resources:
   white-listed: true
 - uri: /privacy
   white-listed: true
+- uri: /cookie
+  white-listed: true
 - uri: /logout
   white-listed: true # this is the page after you have logged out
 - uri: /survey/
