Refactor to move ipsative_data
Signed-off-by: Christopher Mundus <chris@kindlyops.com>

--- a/gatekeeper/config/gatekeeper.tmpl
+++ b/gatekeeper/config/gatekeeper.tmpl
@@ -72,7 +72,7 @@ resources:
   white-listed: true # this is the page after you have logged out
 - uri: /survey/
   white-listed: true # this is the registration funnel entry point
-- uri: /api/ipsative_data
+- uri: /api/ipsative_data/*
   white-listed: true # publicly readable due to registration funnel
 - uri: /api/ipsative_surveys
   white-listed: true # publicly readable due to registration funnel
